--- a/package.json
+++ b/package.json
@@ -10,12 +10,10 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "eslint": "^7.20.0",
+    "@babel/eslint-parser": "^7.15.8",
+    "eslint": "^7.32.0",
     "eslint-config-airbnb-base": "^14.2.1",
     "eslint-config-prettier": "^8.3.0",
-    "eslint-plugin-import": "^2.22.1"
-  },
-  "dependencies": {
-    "@babel/eslint-parser": "^7.13.4"
+    "eslint-plugin-import": "^2.25.2"
   }
 }
